--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "langums-experimental",
   "displayName": "LangUMS",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "publisher": "langums",
   "description": "LangUMS integration",
   "authors": [
@@ -158,7 +158,15 @@
             }
           }
         },
-        "initialConfigurations": "extension.langums.provideInitialConfigurations"
+        "initialConfigurations": [{
+            "type": "langums",
+            "request": "launch",
+            "name": "LangUMS Debug",
+            "langums": "${workspaceRoot}/langums.exe",
+            "map": "${workspaceRoot}/my_map.scx",
+            "lang": "${workspaceRoot}/my_map.l",
+            "dst": "${workspaceRoot}/my_map_release.scx"
+        }]
       }
     ]
   }
