remove experimental from name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "langums-experimental",
+  "name": "langums",
   "displayName": "LangUMS",
   "version": "0.4.3",
   "publisher": "langums",
